# sighound_transfer

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  release.yml
cmake/: FindSignalHoundBB.cmake
include/: version.hpp
scripts/: bootstrap_sdk.sh
src/: main.cpp
src/bb/: bb_device.cpp  bb_device.hpp  bb_error.hpp
src/cli/: cli_options.cpp  cli_options.hpp
src/core/: bandwidth_table.cpp  bandwidth_table.hpp  capture_engine.cpp  capture_engine.hpp  rate_planner.cpp  rate_planner.hpp
src/io/: raw_writer.cpp  raw_writer.hpp  sigmf_writer.cpp  sigmf_writer.hpp  writer_base.hpp
src/util/: progress.cpp  progress.hpp  signal_handler.cpp  signal_handler.hpp
tests/: CMakeLists.txt  test_bandwidth.cpp  test_cli_options.cpp  test_rate_planner.cpp  test_raw_writer.cpp  test_sigmf_metadata.cpp
